FS-4547 removing magic links create endpoint (#321)
* FS-4547 removing magic links create endpoint

* added mock for redis
