# api/magic_links/routes.py
@@ -2,8 +2,6 @@ import json
 import urllib.parse
 from datetime import datetime
 
-from api.responses import error_response
-from api.responses import magic_link_201_response
 from api.session.auth_session import AuthSessionView
 from config import Config
 from flask import current_app
@@ -14,7 +12,6 @@ from flask import url_for
 from flask.views import MethodView
 from fsd_utils.authentication.decorators import login_requested
 from models.account import AccountMethods
-from models.magic_link import MagicLinkError
 from models.magic_link import MagicLinkMethods
 
 
@@ -107,23 +104,3 @@ class MagicLinksView(MagicLinkMethods, MethodView):
                 round=round_short_name,
             )
         )
-
-    def create(self):
-        """
-        Creates a magic link for an existing account holder
-        :param email: the account holders email address
-        :param redirect_url: the url the link should redirect to
-        :return: a json of the magic link created (or an error of failure)
-        """
-        email = request.get_json().get("email")
-        redirect_url = request.get_json().get("redirectUrl")
-        if not email:
-            return error_response(400, "Email is required")
-        account = AccountMethods.get_account(email)
-        if account:
-            try:
-                new_link_json = self.create_magic_link(account, redirect_url)
-                return magic_link_201_response(new_link_json)
-            except MagicLinkError:
-                return error_response(500, "Could not create a unique link")
-        return error_response(401, "Account does not exist")
