# openapi/api.yml
@@ -27,35 +27,6 @@ paths:
                 type: array
                 items:
                   type: string
-    post:
-      tags:
-        - magic links
-      summary: Create a magic link
-      description: Get a fresh magic link for an account holder
-      operationId: api.MagicLinksView.create
-      requestBody:
-        description: Magic link creation parameters
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: 'components.yml#/components/schemas/MagicLinkCreate'
-            example:
-              email: 'a@example.com'
-              redirectUrl: 'https://example.com/redirect-url'
-      responses:
-        201:
-          description: SUCCESS - Active magic link created
-          content:
-            application/json:
-              schema:
-                $ref: 'components.yml#/components/schemas/MagicLink'
-        401:
-          description: ERROR - Could not create magic link
-          content:
-            application/json:
-              schema:
-                $ref: 'components.yml#/components/schemas/GeneralError'
 
   '/magic-links/{link_id}':
     get:
